[project]
name = "mapgraph"
version = "0.1.9"
description = "一个便捷实用的上下文管理工具"
authors = [
    {name = "luxuncang", email = "luxuncang@qq.com"},
]
dependencies = [
    "typing-inspect>=0.9.0",
    "typing-extensions>=4.12.2",
    "pydantic>=2.8.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.1",
]

[tool.pdm.scripts]

test = "python -m pytest"